# cdcp_ai

./: .dockerignore  .gitignore  LICENSE  README.md  clean_slides_3_4.py  create_complete_ppt.py  final_update_all_slides.py  fix_gpt4_only.py  nx.json  package-lock.json  package.json  reorganize_slides_3_4.py  update_ppt.py  update_problem_slide.py  update_solution_slide.py
apps/api/: project.json  tsconfig.app.json  webpack.config.js
apps/api-py/: API_USAGE.md  PIPELINE_SUMMARY.md  README.md  START_API.md  UPSERT_BEHAVIOR.md  project.json  pyproject.toml
apps/api-py/chroma_db/: chroma.sqlite3
apps/api-py/src/: __init__.py  main.py
apps/api-py/src/agents/: langgraph_agent.py
apps/api-py/src/components/: ports.py
apps/api-py/src/controllers/: __init__.py  agent_controller.py  asr_controller.py  cdcp_controller.py  health_controller.py  rag_controller.py  tts_controller.py  voice_controller.py
apps/api-py/src/pipelines/: ingestion_pipeline.py  ingestion_pipeline.py.backup
apps/api-py/src/schemas/: __init__.py  rag_schemas.py
apps/api-py/src/scripts/: run_ingestion.py  simple_test.py  test_complete_rag_pipeline.py  test_embedding_only.py  test_full_pipeline.py  test_vector_db_only.py
apps/api-py/src/services/: __init__.py  asr_service.py  embedding_service_with_transformer.py  llm_service.py  rag_service.py  scraper_service.py  supervisor_service.py  tts_service.py  vector_db_service.py
apps/api-py/src/tts/: __init__.py  coqui_engine.py  ports.py
apps/api-py/test_chroma_db/: chroma.sqlite3
apps/api/src/: main.ts
apps/api/src/app/: app.service.ts
apps/ui/: project.json  tsconfig.app.json  tsconfig.json  webpack.config.js
apps/ui/src/: index.html
apps/ui/src/app/: app.module.css  app.tsx
apps/ui/src/app/components/: ChatInterface.css  ChatInterface.tsx  VoiceChatbot.css  VoiceChatbot.spec.tsx  VoiceChatbot.tsx
chroma_db/: chroma.sqlite3
deployments/: Dockerfile.api-py  Dockerfile.ui  entrypoint.sh
docs/: architecture_diagrams.md  data_ingestion_deep_dive.md
k8/: api-deployment.yaml  api-service.yaml  ui-deployment.yaml  ui-service.yaml
