[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cdcp-ai-api"
version = "0.1.0"
description = "CDCP AI Python API - Fine-tuned models for CDCP analysis"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "CDCP AI Team"},
]
keywords = ["ai", "cdcp", "fine-tuned", "api"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "python-multipart>=0.0.6",
    "httpx>=0.25.0",
    "python-dotenv>=1.0.0",
    "chromadb>=0.4.22",
]

[project.optional-dependencies]
ai = [
    "transformers>=4.40.0",
    "torch>=2.2.0",
    "peft>=0.10.0",
    "accelerate>=0.28.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "pandas>=2.0.0",
    "sentence-transformers>=2.2.0",
    "openai-whisper>=20231117",
    "langchain>=0.1.0",
    "langchain-core>=0.1.0",
    "langchain-openai>=0.0.5",
    "langchain-anthropic>=0.1.0",
    "langgraph>=0.0.20",
]
scraping = [
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
    "tiktoken>=0.5.0",
    "pysbd>=0.3.4",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/your-org/cdcp-ai"
Documentation = "https://github.com/your-org/cdcp-ai/docs"
Repository = "https://github.com/your-org/cdcp-ai"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"